# pvr.amazontv

./: CMakeLists.txt  azure-pipelines.yml
.github/workflows/: build.yml  sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright  kodi-pvr-amazontv.install
pvr.amazontv/: addon.xml.in
pvr.amazontv/resources/language/resource.language.af_za/: strings.po
pvr.amazontv/resources/language/resource.language.am_et/: strings.po
pvr.amazontv/resources/language/resource.language.ar_sa/: strings.po
pvr.amazontv/resources/language/resource.language.ast_es/: strings.po
pvr.amazontv/resources/language/resource.language.az_az/: strings.po
src/: AmazonTVData.cpp  AmazonTVData.h  ClientInstance.cpp  ClientInstance.h  addon.cpp  settings.xml
